[package]
name = "nlp_100_examples"
version = "0.1.0"
authors = ["Yasu_umiNishikawa <yasu.umi.19910101@gmail.com>"]

[dependencies]
rand = "*"
hyper = "*"
hyper-native-tls = "*"
flate2 = "*"
serde_json = "*"
regex = "*"
mecab = "*"
gnuplot = "*"
url = { git = "https://github.com/servo/rust-url" }
cabocha = "*"
